問題11-20について解答を追加しました。ご確認ください。

--- a/第10章：Python基本文法.ipynb
+++ b/第10章：Python基本文法.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "'Pythonはいいぞ'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# マッサージ\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mmassage\u001b[49m\n",
+      "Cell \u001b[0;32mIn[13], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# マッサージ\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mmassage\u001b[49m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'massage' is not defined"
      ]
     }
@@ -80,7 +80,7 @@
        "'P'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1580,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1602,6 +1602,194 @@
     "    def self_introduction(self):\n",
     "        print(\"私は {} （第 {} 形態）。私の戦闘力は {} です。\".format(self.name, self.stage, self.power))\n",
     "        print(\"私は変身をあと {} 回残しています。\".format(self.max_transform - self.stage + 1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() missing 2 required positional arguments: 'x' and 'y'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m freeza \u001b[38;5;241m=\u001b[39m \u001b[43mPerson\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 2 required positional arguments: 'x' and 'y'"
+     ]
+    }
+   ],
+   "source": [
+    "freeza = Person()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "freeza = Person('フリーザ', 530000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "私は フリーザ （第 1 形態）。私の戦闘力は 530000 です。\n",
+      "私は変身をあと 3 回残しています。\n"
+     ]
+    }
+   ],
+   "source": [
+    "freeza.self_introduction()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "変身\n"
+     ]
+    }
+   ],
+   "source": [
+    "freeza.transform()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "私は フリーザ （第 2 形態）。私の戦闘力は 1060000 です。\n",
+      "私は変身をあと 2 回残しています。\n"
+     ]
+    }
+   ],
+   "source": [
+    "freeza.self_introduction()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "変身\n"
+     ]
+    }
+   ],
+   "source": [
+    "freeza.transform()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "私は フリーザ （第 3 形態）。私の戦闘力は 4240000 です。\n",
+      "私は変身をあと 1 回残しています。\n"
+     ]
+    }
+   ],
+   "source": [
+    "freeza.self_introduction()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "変身\n"
+     ]
+    }
+   ],
+   "source": [
+    "freeza.transform()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "私は フリーザ （第 4 形態）。私の戦闘力は 33920000 です。\n",
+      "私は変身をあと 0 回残しています。\n"
+     ]
+    }
+   ],
+   "source": [
+    "freeza.self_introduction()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "マックスパワーの半分も出せばキミを宇宙のチリにすることができるんだ…\n"
+     ]
+    }
+   ],
+   "source": [
+    "freeza.transform()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "私は フリーザ （第 4 形態）。私の戦闘力は 33920000 です。\n",
+      "私は変身をあと 0 回残しています。\n"
+     ]
+    }
+   ],
+   "source": [
+    "freeza.self_introduction()\n"
    ]
   }
  ],
